--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Tri Hoang",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4"
   },
   "devDependencies": {
