--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^7.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
