--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Tri Hoang",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
