--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "helmet": "^3.16.0",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
