--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "helmet": "^3.16.0",
     "http": "0.0.0",
     "https": "^1.0.0",
+    "js": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
+    "momentjs": "^2.0.0",
     "mongoose": "^5.5.0",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
